Adjusted hero VH, fixed overflow issue on about section

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -145,7 +145,7 @@ nav {
     background-image: linear-gradient(117deg, rgba(212, 212, 248, 0.1), rgba(0, 0, 0, 0.5)), 
                        url("/assets/imgs/IMG_4064.jpg");
     background-size: cover;
-    height: 70vh;
+    height: 60vh;
 
     .lame {
         position: absolute;
@@ -266,13 +266,13 @@ nav {
 
     .img-container {
         width: 50%;
-        margin-bottom: auto;
+        margin-bottom: -3px;
 
         img {
-        padding: 0 50px;
+        padding: 0;
         max-width: 100%;
         max-height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         }
     }
 }
